<resources>
    <string name="app_name">Firebase Homework</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="save">save</string>
    <string name="add_user_button">Add user button</string>
    <string name="first_name_label">First name:</string>
    <string name="last_name_label">Last name:</string>
    <string name="age_label">Age:</string>
    <string name="sex_label">Sex:</string>
    <string name="success_add">Added successfully</string>
    <string name="fail_add">Failed add</string>
</resources>